fixing height bar on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -34,12 +34,10 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 6.2rem;
+
 }
-@media (min-width: 768px){
-    .bar__content{
-        height: 6.2rem;
-    }   
-}
+
 #bar__toggle{
     position: absolute;
 	top: -9999px;
